--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<title>Interior</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<!--
 			CSS
 			============================================= -->
@@ -654,5 +655,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/jquery.nice-select.min.js"></script>							
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>	
+			<script src="https://kit.fontawesome.com/43525db9d3.js" crossorigin="anonymous"></script>
 		</body>
 	</html>
